# CMake_Tutorial

./: README.md
CMake00_Trying/: cmake_create_vs2008_graphviz.cmd  版本特性.txt
CMake00_Trying/src/: CMakeLists.txt
CMake01_Simple/: CMakeLists.txt  test.cpp  版本特性.txt
CMake02_Standard/: 版本特性.txt
CMake03_Varialbe_Message/: cmake_create_vs2008.cmd  版本特性.txt
CMake03_Varialbe_Message/src/: CMakeLists.txt
CMake04_Sub-CMakefiles_Library/: CMakeLists.txt  cmake_create_vs2008.cmd  版本特性.txt
CMake04_Sub-CMakefiles_Library/main/: CMakeLists.txt
CMake04_Sub-CMakefiles_Library/main/lib/: library.h
CMake04_Sub-CMakefiles_Library/main/src/: test.cpp
CMake05_Function/: CMakeLists.txt  版本特性.txt
CMake05_Function/main/: CMakeLists.txt
CMake05_Function/main/cmake/: choose_qt_sdk.cmake  force_mtd.cmake  recursive_search.cmake  try.cmake
CMake06_Android_NDK_LLVM_toolchain/: readme.txt
CMake06_Android_NDK_LLVM_toolchain/src/: CMakeLists.txt  android_ndk_18.cmake  android_ndk_llvm.cmake
CMake06_Android_NDK_LLVM_toolchain_Linux/: ndk_cmake_build.sh
CMake06_Android_NDK_LLVM_toolchain_Linux/src/: android_ndk_llvm.cmake
CMake06_find_file_in_CMAKE_MODULE_PATH/: CMakeLists.txt  ndk_cmake_mingw_build.cmd  readme.txt
CMake06_find_file_in_CMAKE_MODULE_PATH/android/include/: readme.txt
CMake06_find_file_in_CMAKE_MODULE_PATH/cmake/: CommonTools.cmake
CMake07_Android_NDK_Windows/: ndk_cmake_build.cmd  ndk_cmake_ninja_build.cmd  readme.txt
CMake07_Android_NDK_Windows/src/: CMakeLists.txt
CMake07_target_sources/: build.sh
CMake07_target_sources/src/: CMakeLists.txt
CMake08_Android_NDK_Windows_build_APK/: ndk_cmake_mingw_build.cmd
CMake08_Android_NDK_Windows_build_APK/android/: AndroidManifest.xml  AndroidManifest.xml.in  qtdeploy.json.in
CMake08_Android_NDK_Windows_build_APK/cmake/: add_qt_lib_to_apk.cmake  qt.cmake
CMake08_Android_NDK_Windows_build_APK/src/: CMakeLists.txt  add_qt_lib_to_apk.cmake  android_predefine.cmake  choose_android_sdk.cmake  choose_qt_sdk.cmake  main.cpp  main.qml  qt.cmake  qtdeploy.json.in
CMake08_Android_NDK_Windows_build_APK/src/0_BackUp_02_minimized/: main.cpp
CMake08_install/: CMakeLists.txt  build.sh
CMake08_install/src/: CMakeLists.txt  logTest.cpp  logTest.h  main.cpp
CMake09_Android_NDK_Windows_build_APK_subproject/: ndk_cmake_mingw_build.cmd  readme.txt
CMake09_Android_NDK_Windows_build_APK_subproject/android/: qtdeploy.json
CMake09_Android_NDK_Windows_build_APK_subproject/cmake/: add_qt_lib_to_apk.cmake
CMake09_Android_NDK_Windows_build_APK_subproject/posscale/src/: main.qml
CMake09_find_package/: CMakeLists.txt
CMake09_find_package/cmake/: FindlogTest.cmake
CMake09_find_package/src/: CMakeLists.txt
CMake10_Android_NDK_Windows_build_APK_bizlars/: ndk_cmake_mingw_build.cmd
CMake10_Android_NDK_Windows_build_APK_bizlars/android/in/: qtdeploy.json.in
CMake10_Android_NDK_Windows_build_APK_bizlars/android/include/: USBTest.h  bizlars.h  test.h
CMake10_Android_NDK_Windows_build_APK_bizlars/cmake/: add_qt_lib_to_apk.cmake  android_predefine.cmake
CMake10_Android_NDK_Windows_build_APK_bizlars/src/: CMakeLists.txt  bizWTlars.cpp  main.cpp  main.qml  scale.cpp  scale.h
CMake11_Qml-Standard/: cmake_create_vs2013_win64.cmd  cmake_create_vs2015.cmd  cmake_create_vs2017.cmd  cmake_deploy_vs2015.cmd  cmake_linux.sh  ndk_cmake_mingw_build.cmd  ndk_cmake_ninja_build.cmd
CMake11_Qml-Standard/src/: CMakeLists.txt  EngineReloader.cpp  EngineReloader.h  EngineReloaderWrapper.cpp  EngineReloaderWrapper.h  GlobalVariant.h  QuickViewReloader.cpp  QuickViewReloader.h  QuickViewReloaderWrapper.cpp  QuickViewReloaderWrapper.h  choose_qt_sdk.cmake  choose_qt_sdk_linux.cmake  main.cpp  main.qml  main.qrc  method2.qml  utils.js
CMake11_Qml-Standard/src/base/: Config.qml
CMake12_cmake_parse_arguments/: CMakeLists.txt  cmake_create_vs2008.cmd  cmake_create_vs2017.cmd
CMake12_cmake_parse_arguments/src/: CMakeLists.txt
CMake20_Linux/src/: CMakeLists.txt  main.cpp
CMake21_Android_NDK_LLVM_toolchain_Linux/: CMakeLists.txt  build.sh  cmake_build.sh  ndk_cmake_build.sh
CMake21_Android_NDK_LLVM_toolchain_Linux/cmake/: android_predefine.cmake  linux_predefine.cmake
CMake21_Android_NDK_LLVM_toolchain_Linux/project/src/: CMakeLists.txt  test.cpp
CMake22_Android_NDK_Windows/: ndk_cmake_mingw_build.cmd  readme.txt
CMake23_Android_NDK_Windows_build_APK/: ndk_cmake_ninja_build.cmd
CMake24_Android_NDK_Windows_build_APK_subproject/: CMakeLists.txt
CMake24_Android_NDK_Windows_build_APK_subproject/cmake/: android_predefine.cmake
CMake24_Android_NDK_Windows_build_APK_subproject/posscale/src/: CMakeLists.txt
CMake25_Android_NDK_Windows_build_APK_bizlars/: readme.txt
CMake25_Android_NDK_Windows_build_APK_bizlars/android/: qtdeploy.json
CMake25_Android_NDK_Windows_build_APK_bizlars/android/in/: AndroidManifest.xml.in
CMake25_Android_NDK_Windows_build_APK_bizlars/android/include/: authentication.h
CMake25_Android_NDK_Windows_build_APK_bizlars/src/: CMakeLists.txt  bizWTlars.h  main.cpp  main.qml  scale.cpp
CMake26_Android_NDK_Windows_build_library/: CMakeLists.txt
CMake26_Android_NDK_Windows_build_library/cmake/: android_predefine.cmake
CMake26_Android_NDK_Windows_build_library/libJNITest/src/: CMakeLists.txt  com_jni_JNITest.c  com_jni_JNITest.h
